# nursing-system-web

./: alter_db.py  alter_db2.py  database_summary.txt  force_create_table.py  main.py  pyproject.toml  requirements.txt
app/: __init__.py  extensions.py
app/controllers/: nurse_controller.py  patient_controller.py  task_controller.py
app/models/: __init__.py  handover_log.py  nurse.py  patient.py  task.py
app/routes/: nurse_routes.py  patient_routes.py  task_routes.py
app/templates/: dashboard.html  login.html  nurse_list.html  patient_details.html  patient_list.html
